--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Lora:wght@500&family=Oswald:wght@700&display=swap"
       rel="stylesheet"
     />
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("9aqS3rPNZD1N1kHb6");
+   })();
+</script>
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Davide Castelli Portfolio</title>
